--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <h2>Get an energizer to put your <br> team on top of things! 
         </h2>
       </div>
-      <div class="leftDog"></div>
-      <img class="imageLeft" src="https://i.ibb.co/6Pt3F6K/left-dog.png">
+      <div class="imageLeft"></div>
+      <img src="https://i.ibb.co/6Pt3F6K/left-dog.png">
     </div>
     </div>
     <div class="split right">
