scrolling x buttons position

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </div>
         
       <div class="centered">
-        <h1>Energizer Hello!</h1>
+        <h1>Energizer</h1>
         <h2>Get an energizer to put your <br> team on top of things! 
         </h2>
         <svg width="65" height="79" viewBox="0 0 65 79" fill="none" xmlns="http://www.w3.org/2000/svg">
