--- a/checkIn.html
+++ b/checkIn.html
@@ -26,6 +26,7 @@
     <div class="check-in">
       <h1 class="question" >[ Describe yourself with a fruit? ]</h1>
       <h2 class="today">Your check-in question for today:</h2>
+      <button class="another">GET ANOTHER</button>
       <img 
         src="/Users/vilma/Documents/GitHub/Toolbox_HI/images/dogunsplash_purple.png"
         />
