linked up arrow buttons

--- a/energizer.html
+++ b/energizer.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
+    
     <title>Generator</title>
     <link
       rel="shortcut icon"
@@ -20,12 +21,13 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Encode+Sans"
     />
+
   </head>
   <body>
-    <div class="check-in">
-      <h1 class="question" >[ Describe yourself with a fruit? ]</h1>
-      <h2 class="today">Your check-in question for today:</h2>
-      <button class="another">GET ANOTHER</button>
+    <div class="energizer-body">
+      <h1 class="question"> [ Bang ] </h1>
+      <h2 class="today">Your energizer of the day:</h2>
+      <button class="generate-energizer-button">GET ANOTHER</button>
       <img 
         src="/Users/vilma/Documents/GitHub/Toolbox_HI/images/dogunsplash_purple.png"
         />
