starting with js

--- a/checkIn.html
+++ b/checkIn.html
@@ -23,12 +23,10 @@
   </head>
   <body>
     <div class="check-in">
-      <h1 class="question" >[ Describe yourself with a fruit? ]</h1>
+      <h1 class="question" >result</h1>
       <h2 class="today">Your check-in question for today:</h2>
-      <button class="another">GET ANOTHER</button>
-      <img 
-        src="/Users/vilma/Documents/GitHub/Toolbox_HI/images/dogunsplash_purple.png"
-        />
+      <button id="generate" class="generate-checkIn-button">GET ANOTHER</button>
+      <button>push</button>
       </img>
     </div>
   </body>
