--- a/energizer.html
+++ b/energizer.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <script src="main.js"></script>
-    
+
     <title>Generator</title>
     <link
       rel="shortcut icon"
@@ -21,17 +21,17 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Encode+Sans"
     />
-
   </head>
   <body>
     <div class="energizer-body">
-      <h1 class="question"> [ Bang ] </h1>
-      <h2 class="today">Your energizer of the day:</h2>
-      <button class="generate-energizer-button">GET ANOTHER</button>
-      <img 
-        src="/Users/vilma/Documents/GitHub/Toolbox_HI/images/dogunsplash_purple.png"
-        />
-      </img>
+      <div class="energizer-content-holder">
+        <div class="present-energizer">Your energizer of the day:<div>
+        <div class="display-energizer">[ Bang Bang Bang]</div>
+        <button class="generate-energizer-button">GET ANOTHER</button>
+
+        <!-- body text -->
+        <div class="body-text-holder"></div>
+      </div>
     </div>
   </body>
 </html>
