--- a/checkIn.html
+++ b/checkIn.html
@@ -22,12 +22,16 @@
     />
   </head>
   <body>
-    <div class="check-in">
-      <h1 class="question" >result</h1>
-      <h2 class="today">Your check-in question for today:</h2>
-      <button id="generate" class="generate-checkIn-button">GET ANOTHER</button>
-      <button>push</button>
-      </img>
+    <div class="check-in-page-main">
+      <div class="check-in-page-parent">
+        <div class="present-question-text">
+          Your check-in question for today:
+        </div>
+        <div class="check-in-question-text">result</div>
+        <button id="generate" class="generate-checkIn-button">
+          GET ANOTHER
+        </button>
+      </div>
     </div>
   </body>
 </html>
