--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
         </a>
       </div>
       </div>
+      <div class="leftDog">
+      <img id="imageLeft" src="https://i.ibb.co/F7Wyc4p/left-dog.png"></div>
     </div>
     <div class="split right">
       <div class="blob02">
@@ -214,6 +216,9 @@
             </defs>
             </svg>           
       </div>
+      <div class="rightDog">
+      <img id="imageRight" src="https://i.ibb.co/jrBkN8w/right-dog.png">
+    </div>
     </div>
   </body>
 </html>
