--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </svg>
       </div>
 
-      <div class="centered">
+      <div id="leftBlock">
         <h1>Energizer</h1>
         <h2>
           Get an energizer to put your <br />
@@ -152,7 +152,7 @@
           />
         </svg>
       </div>
-      <div class="centered">
+      <div id="rightBlock">
         <h1 style="text-align:left;">Check-in</h1>
         <h2 style="text-align:left;">Generate a check-in question <br>
           to kick-start your day!</h2>
