--- a/checkIn.html
+++ b/checkIn.html
@@ -27,8 +27,16 @@
         <div class="present-question-text">
           Your check-in question for today:
         </div>
+
         <div class="check-in-question-text">result</div>
-        <button id="generate" class="generate-checkIn-button">
+
+        <input type="text" id="text" class="check-in-question-text" />
+
+        <button
+          onclick="generate_question()"
+          id="generate"
+          class="generate-checkIn-button"
+        >
           GET ANOTHER
         </button>
       </div>
