--- a/index.html
+++ b/index.html
@@ -51,37 +51,14 @@
           />
         </svg>
       </div>
-
+​
       <div id="leftBlock">
         <h1>Energizer</h1>
         <h2>
           Get an energizer to put your <br />
           team on top of things!
         </h2>
-
-
-        <div class="triangle_left">
-        <svg width="65" height="79" viewBox="0 0 65 79" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <g filter="url(#filter0_d_271:8)">
-          <path d="M55.6063 55.6998C55.1857 55.9228 54.7135 56.0248 54.2403 55.9949C53.7671 55.965 53.3108 55.8044 52.9205 55.5302L19.1194 31.6811C18.774 31.4373 18.4917 31.1117 18.2968 30.7324C18.1018 30.353 18 29.9312 18 29.5029C18 29.0747 18.1018 28.6528 18.2968 28.2735C18.4917 27.8941 18.774 27.5686 19.1194 27.3247L52.9205 3.47564C53.3101 3.1986 53.7669 3.03591 54.241 3.00529C54.7152 2.97468 55.1885 3.07732 55.6093 3.30202C56.0302 3.52672 56.3824 3.86486 56.6276 4.27957C56.8728 4.69429 57.0016 5.16966 57 5.65385V53.352C57.0001 53.8357 56.8702 54.3102 56.6246 54.7241C56.3789 55.1379 56.0268 55.4754 55.6063 55.6998Z" fill="#86B7B4"/>
-          <path d="M55.6063 55.6998C55.1857 55.9228 54.7135 56.0248 54.2403 55.9949C53.7671 55.965 53.3108 55.8044 52.9205 55.5302L19.1194 31.6811C18.774 31.4373 18.4917 31.1117 18.2968 30.7324C18.1018 30.353 18 29.9312 18 29.5029C18 29.0747 18.1018 28.6528 18.2968 28.2735C18.4917 27.8941 18.774 27.5686 19.1194 27.3247L52.9205 3.47564C53.3101 3.1986 53.7669 3.03591 54.241 3.00529C54.7152 2.97468 55.1885 3.07732 55.6093 3.30202C56.0302 3.52672 56.3824 3.86486 56.6276 4.27957C56.8728 4.69429 57.0016 5.16966 57 5.65385V53.352C57.0001 53.8357 56.8702 54.3102 56.6246 54.7241C56.3789 55.1379 56.0268 55.4754 55.6063 55.6998Z" stroke="white" stroke-width="2"/>
-          </g>
-          <defs>
-          <filter id="filter0_d_271:8" x="0" y="0" width="65" height="79" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-          <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-          <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-          <feOffset dx="-5" dy="10"/>
-          <feGaussianBlur stdDeviation="6"/>
-          <feComposite in2="hardAlpha" operator="out"/>
-          <feColorMatrix type="matrix" values="0 0 0 0 0.282336 0 0 0 0 0.433606 0 0 0 0 0.424879 0 0 0 0.5 0"/>
-          <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_271:8"/>
-          <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_271:8" result="shape"/>
-          </filter>
-          </defs>
-          </svg>      
-        </div>    
-
-
+​
         <!-- Blue button -->
         <div class="triangle_left">
         <a href="energizer.html">
@@ -141,12 +118,12 @@
             </defs>
           </svg>
         </a>
-
       </div>
       </div>
       <div class="leftDog">
       <img id="imageLeft" src="https://i.ibb.co/F7Wyc4p/left-dog.png"></div>
     </div>
+    <div id="centerBlock"></div>
     <div class="split right">
       <div class="blob02">
         <?xml version="1.0" encoding="utf-8"?>
@@ -176,26 +153,11 @@
           />
         </svg>
       </div>
-
-      <div class="centered">
-
-        <h1 style="text-align:left;">Check-in</h1>
-        <h2 style="text-align:left;">Generate a check-in question <br>
-          to kick-start your day!</h2>
-          
-          <svg width="65" height="79" viewBox="0 0 65 79" fill="none" xmlns="http://www.w3.org/2000/svg">
-
-        <h1 style="text-align: left">Check-in</h1>
-        <h2 style="text-align: left">
-          Generate a check-in question <br />
-          to kick-start your day!
-        </h2>
-
       <div id="rightBlock">
         <h1 style="text-align:left;">Check-in</h1>
         <h2 style="text-align:left;">Generate a check-in question <br>
           to kick-start your day!</h2>
-
+​
         <!-- Purple button -->
         <a href="checkIn.html">
           <svg
@@ -253,15 +215,7 @@
                 />
               </filter>
             </defs>
-
             </svg>           
-
-          </svg>
-        </a>
-
-
-            </svg>           
-
       </div>
       <div class="rightDog">
       <img id="imageRight" src="https://i.ibb.co/jrBkN8w/right-dog.png">
