--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
       <div class="leftDog">
       <img id="imageLeft" src="https://i.ibb.co/F7Wyc4p/left-dog.png"></div>
     </div>
+    <div id="centerBlock"></div>
     <div class="split right">
       <div class="blob02">
         <?xml version="1.0" encoding="utf-8"?>
