--- a/checkIn.html
+++ b/checkIn.html
@@ -83,19 +83,17 @@
         <div class="present-question-text">
           Your check-in question for today:
         </div>
+          <div id="MyText" class="check-in-question-text">result
+          </div>
 
-        <div id="MyText" class="check-in-question-text">result</div>
-
-        <button
+       <button
           onclick="generate_question()"
           id="generate"
-          class="generate-checkIn-button"
-        >
+          class="generate-checkIn-button">
           GET ANOTHER
         </button>
-        <?xml version="1.0" encoding="utf-8"?>
-
-<div class="filter_icon"><svg width="59" height="47" viewBox="0 0 59 47" fill="none" xmlns="http://www.w3.org/2000/svg">
+        <div class="filter_icon"><?xml version="1.0" encoding="utf-8"?>
+<svg width="59" height="47" viewBox="0 0 59 47" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M4 10C4.4017 10 4.78071 10 5.14286 10C5.87608 10 7.18367 10 7.18367 10C7.18367 10 10.0908 10 12 10" stroke="white" stroke-width="3" stroke-linecap="round"/>
   <path d="M23 10C24.5064 10 25.9276 10 27.2857 10C30.0353 10 34.9388 10 34.9388 10C34.9388 10 45.8405 10 53 10" stroke="white" stroke-width="3" stroke-linecap="round"/>
   <circle cx="17.5" cy="10.5" r="5" stroke="white" stroke-width="3"/>
@@ -106,8 +104,8 @@
   <path d="M30 38L53 38" stroke="white" stroke-width="3" stroke-linecap="round"/>
   <circle cx="24.5" cy="38.5" r="5" stroke="white" stroke-width="3"/>
   </svg>
-  
-</div>
+  </div>
+
       </div>
     </div>
   </body>
