--- a/checkIn.html
+++ b/checkIn.html
@@ -58,7 +58,6 @@
     <!-- Blob  -->
     <div class="blob02" id="check-in">
         <?xml version="1.0" encoding="utf-8"?>
-        <!-- Generator: Adobe Illustrator 22.1.0, SVG Export Plug-In . SVG Version: 6.00 Build 0)  -->
         <svg
           version="1.1"
           id="Layer_1"
@@ -88,32 +87,17 @@
       <!-- Alligning buttom and text  -->
       <div class="check-in-page-parent">
         
-        <div class="present-question-text">
-          Your check-in question for today:
+        <div class="present-question-text"><h3>
+          Your check-in question for today:</h3>
 
         <div id="Check-in-text" class="check-in-question-text">What’s one thing that brings you energy and joy</div>
 
         <div id="generateButton">
           <button href="#" class="generate-checkIn-button">GET ANOTHER</button>
         </div>
-
-        
-        <div class="filter-text">
-          <ul>
-            <h3>Filters</h3>
-            <input type="checkbox" id="work" name="Work" class="checkbox">
-            <label for="Work" class="checkbox-font">Work</label>
-            <input type="checkbox" id="fun" name="Fun" class="checkbox">
-            <label for="Fun">Fun</label>
-            <input type="checkbox" id="connection" name="Connection" class="checkbox">
-            <label for="Connection">Connection</label>
-          </ul>
-          <div> 
-            <button id="savebutton" class="link buzz-out-on-hover">Save</button>
-          </div>
-
-        <!-- Dont know what this is?? / Vilma  -->
-<div class="filter_icon"><?xml version="1.0" encoding="utf-8"?>
+      <!-- Filter button  -->
+<div class="filter_icon">
+  <button id="filterbutton"><?xml version="1.0" encoding="utf-8"?>
 <svg width="59" height="47" viewBox="0 0 59 47" fill="none" xmlns="http://www.w3.org/2000/svg">
   <path d="M4 10C4.4017 10 4.78071 10 5.14286 10C5.87608 10 7.18367 10 7.18367 10C7.18367 10 10.0908 10 12 10" stroke="white" stroke-width="3" stroke-linecap="round"/>
   <path d="M23 10C24.5064 10 25.9276 10 27.2857 10C30.0353 10 34.9388 10 34.9388 10C34.9388 10 45.8405 10 53 10" stroke="white" stroke-width="3" stroke-linecap="round"/>
@@ -125,6 +109,28 @@
   <path d="M30 38L53 38" stroke="white" stroke-width="3" stroke-linecap="round"/>
   <circle cx="24.5" cy="38.5" r="5" stroke="white" stroke-width="3"/>
   </svg>
+</button>
+  </div>
+  <!--Modal-->
+  <div id="FilterModal" class="modal">
+    <div class="modalcontent">
+      <span class="close"></span>
+      <ul>
+        <h3>Type of question</h3>
+        <input type="checkbox" id="work" name="Work" class="checkbox">
+        <label for="Work" class="checkbox-font">Work</label>
+        <input type="checkbox" id="fun" name="Fun" class="checkbox">
+        <label for="Fun">Fun</label>
+        <input type="checkbox" id="connection" name="Connection" class="checkbox">
+        <label for="Connection">Connection</label>
+      </ul>
+      <div> 
+        <button id="savebutton" >Save</button>
+      </div>
+    </div>
+  </div>
+  <!--Modal-->
+</div>
   </div>
       </div>
     </div>
