Questions added and bug fixed
put funciton into button

--- a/checkIn.html
+++ b/checkIn.html
@@ -21,6 +21,7 @@
       href="https://fonts.googleapis.com/css?family=Encode+Sans"
     />
   </head>
+
   <body>
     <div class="check-in-page-main">
       
@@ -94,7 +95,7 @@
         <div id="Check-in-text" class="check-in-question-text">What’s one thing that brings you energy and joy</div>
 
         <div id="generateButton">
-          <button href="#" class="generate-checkIn-button">GET ANOTHER</button>
+          <button onclick="generateQuestion()" class="generate-checkIn-button">GET ANOTHER</button>
         </div>
 
         
