--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
           to kick-start your day!</h2>
 
         <!-- Purple button -->
-        <a href="checkIn.html">
+        <a href="checkIn.html" class="generateQuestion">
           <svg
             width="65"
             height="79"
