--- a/checkIn.html
+++ b/checkIn.html
@@ -106,17 +106,20 @@
 
    <!-- Modal content -->
 <div class="modal-content">
-  <div class="modal-header">
-    <span class="close">&times;</span>
-    <h2>Modal Header</h2>
+  <div class="filter_header">
+    <h3>Type of question</h3></div>
+    <h2>
+    <input type="checkbox" id="work" name="Work" class="checkbox"> 
+    <label for="Work" class="checkbox-font">Work</label>
+    <input type="checkbox" id="fun" name="Fun" class="checkbox">
+    <label for="Fun">Fun</label>
+    <input type="checkbox" id="connection" name="Connection" class="checkbox">
+    <label for="Connection">Connection</label></h2>
+ 
+  <div> 
+    <button id="savebutton" >Save</button>
   </div>
-  <div class="modal-body">
-    <p>Some text in the Modal Body</p>
-    <p>Some other text...</p>
-  </div>
-  <div class="modal-footer">
-    <h3>Modal Footer</h3>
-  </div>
+
 </div> 
 
 </div>
