popup window cosmetics

--- a/checkIn.html
+++ b/checkIn.html
@@ -122,15 +122,15 @@
   <h3>Type of question</h3>
   </div>
   <div class="filter_body"> <h2 style="text-align:left;">
-        <label class="container">To know your team
+        <label class="container"><span id="filtertext">To know your team</span>
           <input type="radio"  name="radio">
           <span class="checkmark"></span>
         </label><br>
-        <label class="container">Work related
+        <label class="container"><span id="filtertext">Work related</span>
           <input type="radio" name="radio">
           <span class="checkmark"></span>
         </label><br>
-        <label class="container">Just fun!
+        <label class="container"><span id="filtertext"></span>Just fun!</span>
           <input type="radio" name="radio">
           <span class="checkmark"></span>
         </label><br></h2>
