--- a/checkIn.html
+++ b/checkIn.html
@@ -123,14 +123,18 @@
   </div>
   <div class="filter_body"> <h2 style="text-align:left;">
         <label class="container"><span id="filtertext">To know your team</span>
-          <input type="radio"  name="radio">
+          <input type="radio"  id="connection" name="Connection" >
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext">Work related</span>
-          <input type="radio" name="radio">
+          <input type="radio"  id="work" name="Work" >
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext"></span>Just fun!</span>
+          <input type="radio"  id="fun" name="Fun">
+          <span class="checkmark"></span>
+        </label><br>
+        <label class="container"><span id="filtertext"></span>I want all of them!</span>
           <input type="radio" name="radio">
           <span class="checkmark"></span>
         </label><br></h2>
