--- a/checkIn.html
+++ b/checkIn.html
@@ -135,7 +135,7 @@
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext"></span>I want all of them!</span>
-          <input type="radio" name="radio">
+          <input type="radio" id="all" name="all">
           <span class="checkmark"></span>
         </label><br></h2>
       </div>
