--- a/checkIn.html
+++ b/checkIn.html
@@ -123,19 +123,19 @@
   </div>
   <div class="filter_body"> <h2 style="text-align:left;">
         <label class="container"><span id="filtertext">To know your team</span>
-          <input type="radio"  id="connection" name="Connection" >
+          <input type="radio"  id="connection" name="question" >
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext">Work related</span>
-          <input type="radio"  id="work" name="Work" >
+          <input type="radio"  id="work" name="question" >
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext"></span>Just fun!</span>
-          <input type="radio"  id="fun" name="Fun">
+          <input type="radio"  id="fun" name="question">
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext"></span>I want all of them!</span>
-          <input type="radio" id="all" name="all">
+          <input type="radio" id="all" name="question">
           <span class="checkmark"></span>
         </label><br></h2>
       </div>
