--- a/checkIn.html
+++ b/checkIn.html
@@ -130,8 +130,8 @@
           <input type="radio"  id="work" name="Work" >
           <span class="checkmark"></span>
         </label><br>
-        <label class="container"><span id="filtertext"></span>Just fun!</span>
-          <input type="radio"  id="fun" name="Fun">
+        <label class="container"><span id="fun"></span>Just fun!</span>
+          <input type="radio"  name="Fun">
           <span class="checkmark"></span>
         </label><br>
         <label class="container"><span id="filtertext"></span>I want all of them!</span>
