--- a/energizer.html
+++ b/energizer.html
@@ -50,6 +50,10 @@
             
        
       </div>
+      <!-- Dog photo  -->
+    <div class="energyDog">
+      <img id="imageEnergy" src="https://i.ibb.co/GpFr8Yr/happydog-green.png">
+  </div>
 
       <div class="energizer-content-holder">
         <div class="present-energizer">Your energizer of the day:<div>
