--- a/energizer.html
+++ b/energizer.html
@@ -56,7 +56,7 @@
   </div>
 
       <div class="energizer-content-holder">
-        <div class="present-energizer">Your energizer of the day:<div>
+        <div class="present-energizer">Your energizer of the day:</div>
         <div id="Energizer-title", class="display-energizer">[ Bang Bang Bang]</div>
         <button onclick="generateEnergizer()", class="generate-energizer-button">GET ANOTHER</button>
 
