--- a/checkIn.html
+++ b/checkIn.html
@@ -20,7 +20,7 @@
       href="https://fonts.googleapis.com/css?family=Encode+Sans"
     />
   </head>
-  <body>
+  <body  onload="generateQuestion()">
     <div class="check-in-page-main">
       
       <!-- Button back  -->
