--- a/index.html
+++ b/index.html
@@ -52,16 +52,18 @@
         </svg>
       </div>
 
+      <!-- left block -->
       <div id="leftBlock">
         <h1>Energizer</h1>
         <h2>
           Get an energizer to put your <br />
           team on top of things!
         </h2>
-
-        <!-- Blue button -->
-        <div class="triangle_left">
+        
         <a href="energizer.html">
+        <!-- Blue button -->
+        <div class="triangle_left" >
+
           <svg 
             width="65"
             height="79"
@@ -117,11 +119,10 @@
               </filter>
             </defs>
           </svg>
-        </a>
       </div>
       </div>
-      <div class="leftDog">
-      <img id="imageLeft" src="https://i.ibb.co/F7Wyc4p/left-dog.png"></div>
+      <div class="leftDog" href="energizer.html" >
+      <img id="imageLeft" src="https://i.ibb.co/F7Wyc4p/left-dog.png" href="energizer.html" ></div>
     </div>
     <div id="centerBlock"></div>
     <div class="split right">
@@ -152,14 +153,15 @@
 	c-1.4-11.1-1.1-21.8,0.6-32.2"
           />
         </svg>
+      </a>
       </div>
+      
+      <!-- RightBlock -->
       <div id="rightBlock">
         <h1 style="text-align:left;">Check-in</h1>
         <h2 style="text-align:left;">Generate a check-in question <br>
           to kick-start your day!</h2>
-
-        <!-- Purple button -->
-        <a href="checkIn.html" class="generateQuestion">
+        <a href="checkIn.html" >
           <svg
             width="65"
             height="79"
