--- a/energizer.html
+++ b/energizer.html
@@ -100,7 +100,7 @@
       <div class="energizer-content-holder">
         <div class="present-energizer">Your energizer of the day:</div>
         <div id="Energizer-title" , class="display-energizer">
-          [ Bang Bang Bang]
+          [ Whoops Something went Wrong ]
         </div>
         <button
           onclick="generateEnergizer()"
@@ -112,7 +112,9 @@
 
         <!-- body text -->
         <div class="body-text-holder">
-          <p id="body-text" class="body-text">Test</p>
+          <p id="body-text" class="body-text">
+            Try reloading the site, or using another browser!
+          </p>
         </div>
       </div>
     </div>
