--- a/energizer.html
+++ b/energizer.html
@@ -118,6 +118,7 @@
         </div>
       </div>
     </div>
+    <footer id="footer"><a href="https://www.linkedin.com/in/vilma-%C3%B6hrman-182a53141/">Vilma</a> ⎢ <a href = "https://www.linkedin.com/in/daria-koltcova-066983151/">Daria </a> ⎢  Nova</footer>
   </body>
   <script src="energizer.js"></script>
 </html>
