--- a/energizer.html
+++ b/energizer.html
@@ -116,9 +116,10 @@
             Try reloading the site, or using another browser!
           </p>
         </div>
-      </div>
-    </div>
-    <footer id="footer"><a href="https://www.linkedin.com/in/vilma-%C3%B6hrman-182a53141/">Vilma</a> ⎢ <a href = "https://www.linkedin.com/in/daria-koltcova-066983151/">Daria </a> ⎢  Nova</footer>
+      
+    
+    <footer id="footer"><a id="linkedin" href="https://www.linkedin.com/in/vilma-%C3%B6hrman-182a53141/">Vilma</a> ⎢ <a id="linkedin" href = "https://www.linkedin.com/in/daria-koltcova-066983151/">Daria </a> ⎢  Nova</footer>
+  </div>
   </body>
   <script src="energizer.js"></script>
 </html>
